support dynamic agent loading